--- a/tables/reduced-form.tex
+++ b/tables/reduced-form.tex
@@ -5,25 +5,32 @@
 \caption{Reduced Form Model}
 \label{table:reduced-form}
 
-\begin{tabular}{l c c c c } 
+\begin{tabular}{@{\extracolsep{5pt}}lD{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} D{.}{.}{-3} } 
 \\[-1.8ex]\hline 
-\hline  
- & \multicolumn{1}{c}{(1)} & \multicolumn{1}{c}{(2)} & \multicolumn{1}{c}{(3)} & \multicolumn{1}{c}{(4)}\\ 
 \hline \\[-1.8ex] 
- Blocks & 0.020^{***} & 0.017^{***} & 0.017^{***} & 0.010^{***} \\ 
-  & (0.001) & (0.001) & (0.001) & (0.0005) \\ 
- Floods & 0.025^{***} & 0.023^{***} & 0.023^{***} & 0.015^{***} \\ 
-  & (0.0005) & (0.0005) & (0.0005) & (0.0004) \\ 
- Spillovers & 0.013^{***} & 0.011^{***} & 0.011^{***} & 0.004^{***} \\ 
-  & (0.0003) & (0.0003) & (0.0003) & (0.0003) \\ 
-\hline \\[-1.8ex]
-Trip FE & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes}\\
-Month FE  & \multicolumn{1}{c}{No} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes} \\
-Day of Week FE  & \multicolumn{1}{c}{No} & \multicolumn{1}{c}{No} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes}\\
-Time of Day FE & \multicolumn{1}{c}{No} & \multicolumn{1}{c}{No} & \multicolumn{1}{c}{No} & \multicolumn{1}{c}{Yes}\\
+
+\\[-1.8ex] & \multicolumn{4}{c}{ln(Trip Duration)} \\ 
+\\[-1.8ex] & \multicolumn{1}{c}{(1)} & \multicolumn{1}{c}{(2)} & \multicolumn{1}{c}{(3)} & \multicolumn{1}{c}{(4)}\\ 
+\hline \\[-1.8ex] 
+Blocks & 0.008^{***} & 0.006^{***} & 0.006^{***} & -0.002 \\ 
+  & (0.002) & (0.002) & (0.002) & (0.002) \\ 
+  & & & & \\ 
+Floods & 0.011^{***} & 0.010^{***} & 0.010^{***} & 0.002 \\ 
+  & (0.002) & (0.002) & (0.002) & (0.002) \\ 
+  & & & & \\ 
+\hline \\[-1.8ex] 
+Trip FE & Y & Y & Y & Y \\ 
+Month FE & N & Y & Y & Y \\ 
+Day of Week FE & N & N & Y & Y \\ 
+Hour FE & N & N & N & Y \\ 
+Observations & \multicolumn{1}{c}{1,121,115} & \multicolumn{1}{c}{1,121,115} & \multicolumn{1}{c}{1,121,115} & \multicolumn{1}{c}{1,121,115} \\ 
+R$^{2}$ & \multicolumn{1}{c}{0.987} & \multicolumn{1}{c}{0.987} & \multicolumn{1}{c}{0.987} & \multicolumn{1}{c}{0.990} \\ 
+Adjusted R$^{2}$ & \multicolumn{1}{c}{0.987} & \multicolumn{1}{c}{0.987} & \multicolumn{1}{c}{0.987} & \multicolumn{1}{c}{0.990} \\ 
+Residual Std. Error & \multicolumn{1}{c}{0.109} & \multicolumn{1}{c}{0.107} & \multicolumn{1}{c}{0.107} & \multicolumn{1}{c}{0.096} \\ 
 \hline 
-\hline \\[-1.8ex]
+\hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{4}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+ & \multicolumn{4}{r}{Standard errors are clustered at the trip level}\\
 \end{tabular} 
 
 \end{table}
