--- a/tables/iv-secondstage(peak).tex
+++ b/tables/iv-secondstage(peak).tex
@@ -9,22 +9,28 @@
 \begin{tabular}{l c c c c}
 \\[-1.8ex]\hline
 \hline
+ & \multicolumn{4}{c}{Trip Duration (Minutes)} \\
  & \multicolumn{1}{c}{Average} & \multicolumn{1}{c}{Morning Peak} & \multicolumn{1}{c}{Evening Peak} & \multicolumn{1}{c}{Off-Peak}\\
 \hline \\[-1.8ex]
-pr.Blocks & 0.003^{***} & 0.003^{***} & 0.003^{***} & 0.003^{***}\\
- & (0.0001) & (0.0002) & (0.0002) & (0.0002) \\
-pr.Floods & 0.004^{***} & 0.007^{***} & 0.005^{***} & 0.001^{***}\\
- & (0.0001) & (0.0002) & (0.0002) & (0.0001) \\
-pr.Spillovers & 0.001^{***} & -0.001^{***} & 0.001^{***} & 0.002^{***}\\
- & (0.0001) & (0.0002) & (0.0002) & (0.0001) \\
-\hline
-Trip FE & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes}\\
-Month FE  & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes} \\
-Day of Week FE  & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes}\\
-Time of Day FE & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes} & \multicolumn{1}{c}{Yes}\\
-\hline
-\hline \\[-1.8ex]
-\textit{Note:}  & \multicolumn{4}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\
+pr.Blocks &  0.001^{***} & 0.003^{***} & -0.001  & 0.001^{***} \\ 
+          & (0.0002) & (0.001) & (0.0004)  & (0.0003) \\
+          & \\
+pr.Floods & 0.002^{***} & 0.005^{***} & -0.001 & 0.002^{***} \\
+          & (0.0003) & (0.001) & (0.001) & (0.0003) \\
+\hline \\[-1.8ex] 
+Trip FE & Y & Y & Y & Y \\ 
+Month FE & Y & Y & Y & Y \\ 
+Day of Week FE & Y & Y & Y & Y \\ 
+Hour FE & Y & Y & Y & Y \\ 
+Observations &  \multicolumn{1}{c}{1,121,115} &  \multicolumn{1}{c}{1,121,115} &  \multicolumn{1}{c}{1,121,115} &  \multicolumn{1}{c}{1,121,115}\\ 
+R$^{2}$ &  \multicolumn{1}{c}{0.973} &  \multicolumn{1}{c}{0.973} &  \multicolumn{1}{c}{0.973} &  \multicolumn{1}{c}{0.973} \\ 
+Adjusted R$^{2}$ & \multicolumn{1}{c}{0.972} & \multicolumn{1}{c}{0.972} & \multicolumn{1}{c}{0.972} & \multicolumn{1}{c}{0.972} \\ 
+Residual Std. Error &  \multicolumn{1}{c}{2.828} & \multicolumn{1}{c}{2.827} & \multicolumn{1}{c}{2.827} & \multicolumn{1}{c}{2.827}\\ 
+\hline 
+\hline \\[-1.8ex] 
+\textit{Note:}  & \multicolumn{4}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
+ & \multicolumn{4}{r}{Standard errors are clustered at the trip level} \\ 
 \end{tabular} 
+\end{table} 
 
 \end{table}
